--- a/wp-content/themes/heideandcook/package.json
+++ b/wp-content/themes/heideandcook/package.json
@@ -21,5 +21,8 @@
     "gulp-sass": "^2.2.0",
     "gulp-uglify": "^1.5.2",
     "gulp-watch": "^4.3.5"
+  },
+  "dependencies": {
+    "gulp-clean-css": "^2.0.11"
   }
 }
